--- a/woodenart/src/components/Navbar/Navbar.css
+++ b/woodenart/src/components/Navbar/Navbar.css
@@ -1,56 +1,65 @@
- #nav {
-    background-color: #fff;
-    color: #6c63ff;
-  }
-  
-  #nav ul {
-    display: flex;
-    list-style: none;
-  }
-  #nav li {
-    margin: 15px;
-    padding: 10px;
-    color: black;
-  }
-  .container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    
-  }
-  .logo {
-    font-family: cursive;
-  }
-  .links li {
-    border-bottom: 2px solid transparent;
-    font-weight: bold;
-  }
-  .links li:hover {
+
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: #444;
+  font-size: 18px;
+}
+
+#nav {
+  background-color: #fff;
+  color: #6c63ff;
+}
+
+#nav ul {
+  display: flex;
+}
+#nav li {
+  margin: 15px;
+  padding: 10px;
+}
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 10vh;
+}
+.logo {
+  font-family: cursive;
+}
+.links li {
+  border-bottom: 2px solid transparent;
+  font-weight: bold;
+}
+.links li:hover {
+  border-color: #6C63FF;
+}
+
+.btn{
+    color:#fff;
+    background-color: #6C63FF;
+    padding:8px;
+    border:none;
+    outline:none;
+    cursor:pointer;
+    border:2px solid transparent;
+}
+.btn:hover{
     border-color: #6C63FF;
-    cursor: pointer;
-  }
-  
-  .btn{
-      color:#fff;
-      background-color: #6C63FF;
-      padding:8px;
-      border:none;
-      outline:none;
-      cursor:pointer;
-      border:2px solid transparent;
-  }
-  .btn:hover{
-      border-color: #6C63FF;
-      color: #6C63FF;
-      background-color: #fff;
-      outline:none;
-  }
-  .btn:focus{ 
-      outline:none;
-  }
-  
-   
-  @media (max-width:767px){
+    color: #6C63FF;
+    background-color: #fff;
+    outline:none;
+}
+.btn:focus{ 
+    outline:none;
+}
+
+@media (max-width:767px){
     *{
         padding:0;
         margin:0;
@@ -69,3 +78,4 @@
           border:none;
       }
 }
+
